# BinaryVis

./: .gitignore  LICENSE  README.md  README_CN.md  start.sh
backend/: .gitignore  Cargo.toml
backend/src/: config.rs  error.rs  main.rs
backend/src/core/: cache.rs  file_manager.rs  mod.rs  sampler.rs
backend/src/protocol/: messages.rs  mod.rs
backend/src/sampling/: mod.rs  uniform.rs
backend/src/server/: handlers.rs  mod.rs  routes.rs  websocket.rs
docs/: API_DESIGN.md  BACKEND_ARCHITECTURE.md  DEBUG.md  FRONTEND_ARCHITECTURE.md  SYSTEM_DESIGN.md  TODO.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: config.js  main.js
frontend/src/core/: DataManager.js  ErrorHandler.js  WebSocketClient.js
frontend/src/i18n/: i18n.js  translations.js
frontend/src/rendering/: Renderer.js  Shaders.js  TrigramRenderer.js
frontend/src/styles/: main.css
frontend/src/ui/: ControlPanel.js
