[package]
name = "binaryvis-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
memmap2 = "0.9"
rayon = "1.8"
rmp-serde = "1.1"
rmp = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.5"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
base64 = "0.22"
dotenv = "0.15"

[[bin]]
name = "binaryvis-backend"
path = "src/main.rs"
